--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecycleViewActivity">
+        <activity android:name=".RecycleViewActivity"
+            android:label="recycleView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,6 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".CardViewActivity">
+            </activity>
+        <activity android:name=".StaggaredRecycleView">
+        </activity>
+        <activity android:name=".ToolBarActivity"
+            android:theme="@style/AppTheme.Base">
         </activity>
     </application>
 
