--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:22.+'
 //    compile 'com.android.support:appcompat-v7:23.0.3'
+    compile 'com.android.support:design:22.+'
 }
