--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,15 @@
         <activity android:name=".charts.PieChartActivityT"
             android:label="pie">
         </activity>
+
+        <activity
+            android:name="com.vonchenchen.menudemo.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="menuMainActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
