jni将数据放进so文件中

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,13 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk{
+            moduleName "jni" //       	编译后so库的名字
+            ldLibs  "log" //    	连接的库，可以有多个
+            abiFilters "armeabi","armeabi-v7a","x86"  //so库运行的cpu架构，有armeabi armeabi-v7a arm64-v8a x86 x86_64 mips mips64这些，常用的是armeabi和armeabi-v7a
+//            stl "stlport_shared" //C++ runtime support library，共有九种
+//            cFlags "-DANDROID_NDK -D_RELEASE"   //    	编译选项
+        }
     }
     buildTypes {
         release {
@@ -23,9 +29,6 @@ dependencies {
     compile project(':menudemo')
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
 //    compile 'com.android.support:appcompat-v7:25.+'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     testCompile 'junit:junit:4.12'
