--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         <activity
             android:name="www.dgl.com.androidfive.RecycleViewActivity"
             android:theme="@style/AppTheme.Base">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="www.dgl.com.androidfive.CardViewActivity"
@@ -50,12 +50,14 @@
             android:name="www.dgl.com.androidfive.charts.PieChartActivityT"
             android:label="pie"></activity>
         <activity android:name="www.dgl.com.androidfive.brage.BrageActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
-
+        <activity
+            android:name=".ProgressbarActivity"
+            android:label="pie"></activity>
         <activity
             android:name="com.vonchenchen.menudemo.MainActivity"
             android:label="@string/app_name">
